--- a/Numpy_Basic.ipynb
+++ b/Numpy_Basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOd9SCzlPJ+ne5o66XKKS9",
+      "authorship_tag": "ABX9TyPTJmHPPzohf+D9V7FbZQx8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,25 +28,74 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "np.__version__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "s8b5jOyA05Cp",
+        "outputId": "bbcd5b07-6582-4d2c-b1b2-41dd934108bc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1.26.4'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create a numpy array\n",
+        "\"\"\"\n",
+        "numpy properties: dtype, shape, ndim, type\n",
+        "print(type(my_np_array))\n",
+        "\"\"\"\n",
+        "\n",
+        "my_np_array = np.array(\n",
+        "    [1,2,3,4,5]\n",
+        ")\n",
+        "print(my_np_array)\n",
+        "print(type(my_np_array))\n",
+        "print(my_np_array.dtype)\n",
+        "print(my_np_array.shape)\n",
+        "print(my_np_array.ndim)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "WSMFr8UdxPdz",
-        "outputId": "5da4bebc-0a44-4d6d-aed8-7c90319ed541"
+        "id": "_NXnQWNP1G0z",
+        "outputId": "e8fdabc1-07ef-4107-fcb7-7497e7be6dab"
       },
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello\n"
+            "[1 2 3 4 5]\n",
+            "<class 'numpy.ndarray'>\n",
+            "int64\n",
+            "(5,)\n",
+            "1\n"
           ]
         }
-      ],
-      "source": [
-        "print(\"Hello\")"
       ]
     }
   ]
